--- a/web/index.html
+++ b/web/index.html
@@ -74,9 +74,7 @@
         .xaxis path {
             display: none;
         }
-        .bar {
-            fill: steelblue;
-        }
+
     </style>
     <style>
         #chart{
@@ -164,7 +162,7 @@
     <div class="header">front view</div>
     <div class="content"> <a id="reload" href="#">waiting</a>&nbsp;&nbsp;
         <div id="radialset">  </div>
-        <div id="arealine"></div>
+        <div id="stackarea"></div>
     </div>
  <!--   <div class="footer">
 
@@ -288,7 +286,7 @@
 </script>
 <script src="js/sunburst.js"></script>
 
-<script src="js/stackline.js"></script>
+<script src="js/stackarea.js"></script>
 
 <script src="js/cluster.js"></script>
 <script src="js/BrandBar.js"> </script>
